infrastructure/gateway/gateway.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/warn: restricted
    istio.io/dataplane-mode: ambient
  name: tls-certs
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-traefik-acme-gateway
  namespace: tls-certs
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: traefik-acme
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: traefik-acme
  to:
    - group: ""
      kind: Secret
      name: acme-dns-server
    - group: ""
      kind: Secret
      name: star-pipenberg-eu
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-traefik-gateway
  namespace: tls-certs
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: traefik
  to:
    - group: ""
      kind: Secret
      name: star-pipenberg-eu
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: infra-gateway
  namespace: traefik
spec:
  gatewayClassName: traefik
  listeners:
    - name: web
      protocol: HTTP
      port: 9000
      hostname: "*.pipenberg.eu"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values:
                  - policy-reporter
                  - shop
                  - iot-s
    - name: websecure
      protocol: HTTPS
      port: 9443
      hostname: "*.pipenberg.eu"
      tls:
        mode: Terminate
        certificateRefs:
        - kind: Secret
          name: star-pipenberg-eu
          namespace: tls-certs
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values:
                  - policy-reporter
                  - shop
                  - iot-s
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: infra-gateway
  namespace: traefik-acme
  annotations:
    cert-manager.io/cluster-issuer: "le-issuer"
spec:
  gatewayClassName: traefik-acme
  listeners:
    - name: websecure
      protocol: HTTPS
      port: 9443
      hostname: "acme.pipenberg.eu"
      tls:
        mode: Terminate
        #certificateRefs:
        #- kind: Secret
        #  name: acme-dns-server
        #  namespace: tls-certs
        certificateRefs:
        - name: acme-dns-server-tls
          namespace: tls-certs
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values:
                  - acme-dns
